advanced/01.service-mesh/k8s-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: gateway
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-http
    namespace: default
  hostnames:
  - "34-36-240-216.nip.io"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: istio-ingressgateway
      port: 80
